# code_review_ai

./: .env.sample  README.md  pyproject.toml
src/code_review_ai/: config.py  exceptions.py  github_manager.py  groq_request.py  main.py  repo_handler.py  schemas.py
tests/: test_config.py  test_github_manager.py  test_groq_request.py  test_main.py  test_repo_handler.py
