[project]
name = "code_review_ai"
version = "0.1.0"
description = ""
authors = [
    {name = "RomanHlodann",email = "roman.hlodann@gmail.com"}
]
packages = [{ include = "code_review_ai", from = "src" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pygithub (>=2.5.0,<3.0.0)",
    "groq (>=0.13.1,<0.14.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
